Object disappears, Blender crashes #42395

Closed
opened 2014-10-25 20:42:23 +02:00 by Seth L. · 14 comments

System Information
OS X 10.8.5 ATI Radeon HD 4850 512 MB

Blender Version
Broken: 2.72 95182d1

Short description of error
In this project I am working on I am getting nasty crashes repeatedly. This is about the sixth time tonight.
Sorry, but I don't have the know-how to narrow-down what is causing the crashes, however I will attach the .blend and an OS X crash report and hopefully it will offer some clues.

One thing I did note is that after a render my main object (a spider model) disappears from the 3D viewport.
Once the viewport is zoomed or a setting is changed that causes the viewport to refresh, either the object reappears or Blender crashes.
I have never had objects disappear like this before, so I believe this behavior is related to the crashes.

Exact steps for others to reproduce the error
Open the attached .blend and do some renders, change some settings, render again, etc. It shouldn't be long before it crashes.
May or may not be OS/hardware-specific.

Files
http://cc4.co/IIEK (24MB packed .blend)
http://cc4.co/ANHZ (crash report - .txt file)

**System Information** OS X 10.8.5 ATI Radeon HD 4850 512 MB **Blender Version** Broken: 2.72 95182d1 **Short description of error** In this project I am working on I am getting nasty crashes repeatedly. This is about the sixth time tonight. Sorry, but I don't have the know-how to narrow-down what is causing the crashes, however I will attach the .blend and an OS X crash report and hopefully it will offer some clues. One thing I did note is that after a render my main object (a spider model) disappears from the 3D viewport. Once the viewport is zoomed or a setting is changed that causes the viewport to refresh, either the object reappears or Blender crashes. I have never had objects disappear like this before, so I believe this behavior is related to the crashes. **Exact steps for others to reproduce the error** Open the attached .blend and do some renders, change some settings, render again, etc. It shouldn't be long before it crashes. May or may not be OS/hardware-specific. **Files** http://cc4.co/IIEK (24MB packed .blend) http://cc4.co/ANHZ (crash report - .txt file)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @quantumanomaly

Added subscriber: @quantumanomaly

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

OS X 10.10 32Mb
2.7 GHz Intel Core i5
AMD Radeon HD 6770M 512 MB

Reduced file to cube with 17 hairs in particle system.
Steps to consistently reproduce crash.

  1. Select Particles panel, change number of particles from 17 to 18, hit enter.
  2. change 18 back to 17.
  3. render
  4. change size of 3D view window and crash.

(Changing particles to anything under 17 and back does not produce crash.)

Attached crash log and blend file.

halloween_bugcub17imageeditor.blend

bug.txt

OS X 10.10 32Mb 2.7 GHz Intel Core i5 AMD Radeon HD 6770M 512 MB Reduced file to cube with 17 hairs in particle system. Steps to consistently reproduce crash. 1) Select Particles panel, change number of particles from 17 to 18, hit enter. 2) change 18 back to 17. 3) render 4) change size of 3D view window and crash. (Changing particles to anything under 17 and back does not produce crash.) Attached crash log and blend file. [halloween_bugcub17imageeditor.blend](https://archive.blender.org/developer/F119687/halloween_bugcub17imageeditor.blend) [bug.txt](https://archive.blender.org/developer/F119688/bug.txt)

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
I'm getting a `heap-buffer-overflow` here: https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/space_view3d/drawobject.c;c8d10d115cc54417f364aa515ba020a9c7b9bd5d$5146 Backtrace : [bt.txt](https://archive.blender.org/developer/F119702/bt.txt)
Author

FloridaJo, thank you for reducing the .blend to its very basic elements and reporting.
I used your .blend and was able to reproduce the crash on another Mac when resizing the window after rendering.
So now we have seen this occur on three different Macs running three different versions of OS X.
I wonder if any Windows or Linux users will be able to reproduce this.

System Information
11-inch MacBook Air
OS X 10.6.8
1.6 GHz Intel Core 2 Duo
4GB 1067 MHz DDR3
NVIDIA GeForce 320M

Blender Version
Broken: 2.72 95182d1

Exact steps for others to reproduce the error
(Same as FloridaJo's post)

Files
crash_mb_air_snowlep.txt

FloridaJo, thank you for reducing the .blend to its very basic elements and reporting. I used your .blend and was able to reproduce the crash on another Mac when resizing the window after rendering. So now we have seen this occur on three different Macs running three different versions of OS X. I wonder if any Windows or Linux users will be able to reproduce this. **System Information** 11-inch MacBook Air OS X 10.6.8 1.6 GHz Intel Core 2 Duo 4GB 1067 MHz DDR3 NVIDIA GeForce 320M **Blender Version** Broken: 2.72 95182d1 **Exact steps for others to reproduce the error** (Same as FloridaJo's post) **Files** [crash_mb_air_snowlep.txt](https://archive.blender.org/developer/F119704/crash_mb_air_snowlep.txt)

Well, I'm on Linux :) Also note that we don't have to re-size the window, simply clicking in or trying to do anything with the 3D view will trigger the crash. It apparently happens in the function that draws the particles.

Well, I'm on Linux :) Also note that we don't have to re-size the window, simply clicking in or trying to do anything with the 3D view will trigger the crash. It apparently happens in the function that draws the particles.
Author

Kévin, thanks for mentioning that.
In my .blend I had the particles being influenced by an image texture, as well as by the particle settings. While these values should not step on each other's toes, it is something worth noting.

Kévin, thanks for mentioning that. In my .blend I had the particles being influenced by an image texture, as well as by the particle settings. While these values *should* not step on each other's toes, it is something worth noting.
Lukas Tönne was assigned by Bastien Montagne 2014-10-26 09:35:39 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Crash in ILM lib again… :/ Anyway, seems related to particles.

Crash in ILM lib again… :/ Anyway, seems related to particles.

This issue was referenced by 5802d4531d

This issue was referenced by 5802d4531d46c99b1d7fb69f8b9ccb700505b414
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 5802d4531d.

Closed by commit 5802d4531d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42395
No description provided.