Fix T42395: Stored "render data" in particles mismatches the particle amount and crashes after Cycles render.

This is a hack to fix this, but at this point the system is hopelessly
broken anyway and no good fix other than total rewriting is possible.